Added some small changes
Mostly edited the README file

--- a/lineEight.html
+++ b/lineEight.html
@@ -15,7 +15,7 @@
         <section id="eight">
             <h3 class="lyrics">Everybody's born to compete</h3>
             <h2 class="lyrics">as he chooses</h2>
-            <h1>but how can someone</h1>
+            <h1 class="lyrics">but how can someone</h1>
             <a href="lineEightPartTwo.html"> win</h4>
         </section>
 
