Slice Of Life Changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Scatman's World By Scatman John</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/styles2.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
     <body>
         <section id="landing">
