--- a/lineNine.html
+++ b/lineNine.html
@@ -8,7 +8,7 @@
             Scatman's World: Line Nine
         </title>
         <link rel="stylesheet" href="css/speedingup.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
 
     <body>
