--- a/lineOne.html
+++ b/lineOne.html
@@ -7,7 +7,7 @@
         <title>Scatman's World: Line One</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/styles3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
     <body>
         <section id="One">
