--- a/lineThirteen.html
+++ b/lineThirteen.html
@@ -8,7 +8,7 @@
             Scatman's World: Line Thirteen
         </title>
         <link rel="stylesheet" href="css/finish.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
 
     <body>
