--- a/lineThree.html
+++ b/lineThree.html
@@ -8,7 +8,7 @@
         </title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/styles3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
 
     <body>
