--- a/theEnd.html
+++ b/theEnd.html
@@ -7,7 +7,8 @@
         <title>
             Scatman's World: Credits
         </title>
-        <link rel="stylesheet" href="css/theEnd.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Micro+5">
+        <link rel="stylesheet" href="css/theEnd.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue">
     </head>
 
     <body>
@@ -18,7 +19,8 @@
             <h3>Extensions Of VSC used: <br> Live Server & css-auto-prefix</h3>
             
             <h2>Thank you for watching</h2>
-            <h1>Click "Beginning" To <br> Watch The Whole Animation again</h1>
+            <h1>Click "Beginning" To Watch 
+                 <br> The Whole Animation again</h1>
 
         </section>
 
